# tracking-system-2

./: .coverage  .dockerignore  .env  .env.example  .env.production  .gitignore  =0.19.0  =2.0.0  ANALYSIS_SUMMARY.md  CLAUDE.md  Dockerfile  INDEX.md  README.md  TEST_ANALYSIS_INDEX.md  TEST_ANALYSIS_SUMMARY.md  alembic.ini  app.db  auth.db  auth_serve.db  calculator.py  docker-compose.override.yml  docker-compose.yml  gunicorn.conf.py  insurance_platform.db  main.py  pom.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_auth_serve.db  test_calculator.py  test_output.txt  test_registration.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_initial_schema.py  001_create_users.py  56826e457b7d_create_initial_schema.py
app/: __init__.py  config.py  database.py  db.py  dependencies.py  exception_handlers.py  exceptions.py  main.py  middleware.py  pom.xml  security.py
app/api/: __init__.py  auth.py  deps.py  users.py
app/auth/: models.py  router.py  schemas.py  service.py
app/circuit_breaker/: breaker.py
app/core/: __init__.py  auth.py  circuit_breaker.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
app/crud/: user.py
app/db/: __init__.py  base.py  session.py
app/middleware/: correlation_id.py  exception.py  logging.py  logging_middleware.py
app/models/: __init__.py  audit.py  audit_log.py  base.py  claim.py  document.py  enums.py  integration.py  payment.py  policy.py  request_log.py  schemas.py  user.py  vendor.py
app/repositories/: __init__.py  request_log_repository.py  user_repository.py
app/routers/: __init__.py  admin.py  auth.py  claim.py  health.py  payment.py  policy.py  users.py  vendor.py
app/routes/: auth.py  health.py
app/schemas/: __init__.py  admin.py  auth.py  claim.py  common.py  health.py  payment.py  policy.py  token.py  user.py  vendor.py
app/services/: __init__.py  admin_service.py  audit_service.py  auth.py  auth_service.py  circuit_breaker.py  claim_service.py  health_service.py  payment_service.py  policy_service.py  user_service.py  vendor_service.py
app/utils/: __init__.py  audit.py  circuit_breaker.py  correlation.py  exceptions.py  integrations.py  jwt.py  logger.py  logging.py  password.py  security.py
artifacts/1/: prompt.txt  system_prompt_append.txt
artifacts/1111/: prompt.txt  system_prompt_append.txt
artifacts/2/: prompt.txt  system_prompt_append.txt
artifacts/222222/: prompt.txt  system_prompt_append.txt
artifacts/333/: prompt.txt  system_prompt_append.txt
artifacts/afasfas-dev/: prompt.txt  system_prompt_append.txt
artifacts/asafaaa/: prompt.txt  system_prompt_append.txt
artifacts/auh-sys-architect/: prompt.txt  system_prompt_append.txt
artifacts/auh-sys-ba/: prompt.txt  system_prompt_append.txt
artifacts/auh-sys-dba/: architecture.md  database-design.md  features.json  prompt.txt  system_prompt_append.txt
artifacts/auth-analysis/: analysis.md  diagrams.puml  prompt.txt  requirements.md  system_prompt_append.txt
artifacts/auth-design/: README.md  SUMMARY.md  architecture.md  design.md  features.json  prompt.txt  system_prompt_append.txt
artifacts/auth-implement/: harness-test-output.txt  prompt.txt  system_prompt_append.txt
artifacts/auth-review/: harness-test-output.txt  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-analysis/: analysis.md  design.md  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-app-analysis/: analysis.md  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-app-design/: design.md  features.json  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-app-implement/: fix_prompt.txt  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-app-test/: fix_prompt.txt  harness-test-output.txt  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-design/: design.md  features.json  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-implement/: features.json  findings.md  fix_prompt.txt  implementation.md  prompt.txt  system_prompt_append.txt
artifacts/auth-serve-test/: findings.md  fix_prompt.txt  harness-test-output.txt  prompt.txt  system_prompt_append.txt  test-results.md
artifacts/auth-service/: prompt.txt  (+2 more)
artifacts/auth-service-1/: prompt.txt  system_prompt_append.txt
artifacts/auth-service-1-apidesign/: prompt.txt  system_prompt_append.txt
artifacts/auth-service-1-architect/: prompt.txt  system_prompt_append.txt
artifacts/auth-service-1-ba/: prompt.txt  requirements.md  system_prompt_append.txt
artifacts/auth-service-1-dba/: prompt.txt  system_prompt_append.txt
artifacts/auth-service-1-dev/: prompt.txt  system_prompt_append.txt
artifacts/auth-service-2/: prompt.txt  system_prompt_append.txt
artifacts/auth-service-analysis/: README.md  analysis.md  database-schema.sql  prompt.txt  system_prompt_append.txt
artifacts/auth-service-design/: DESIGN_SUMMARY.md  api_specification.md  database_schema.md  design.md  diagrams.puml  features.json  prompt.txt  system_prompt_append.txt
artifacts/auth-service-implement/: features.json  fix_prompt.txt  implementation.md  prompt.txt  system_prompt_append.txt
artifacts/auth-service-java-1/: features.json  fix_prompt.txt  implementation.md  prompt.txt  system_prompt_append.txt
backend/: main.py  requirements.txt
config/: application-prod.yml
docs/: database_schema.md
frontend/: package.json
migrations/: env.py
tests/: __init__.py  conftest.py  test_auth.py  test_circuit_breaker.py  test_core.py  test_logging.py  test_main.py  test_models.py  test_users.py
(+496 files in other folders)
